--- a/manuscript/ms.Rmd
+++ b/manuscript/ms.Rmd
@@ -1,7 +1,7 @@
 ---
 title: "Tidy NEON organismal data for biodiversity research"
 author: 
-  - "Daijiang Li^1,2^, Sydne Record^3^, Eric Sokol^4^, Matthew E. Bitters, Melissa Y. Chen, Anny Y. Chung, Matthew Helmus, Ruvi Jaimes, Lara Jansen, Marta A. Jarzyna, Michael G. Just, Jalene M. LaMontagne, Brett Melbourne, Wynne Moss, Kari Norman, Stephanie Parker, Natalie Robinson, Bijan Seyednasrollah, Colin Smith, Sarah Spaulding, Thilina Surasinghe, Sarah Thomsen, Phoebe Zarnetske"
+  - "Daijiang Li^1,2^, Sydne Record^3^, Eric Sokol^4,5^, Matthew E. Bitters^6^, Melissa Y. Chen^6^, Anny Y. Chung^7^, Matthew R. Helmus^8^, Ruvi Jaimes^4^, Lara Jansen^9^, Marta A. Jarzyna^10,11^, Michael G. Just^12^, Jalene M. LaMontagne^13^, Brett Melbourne^6^, Wynne Moss^6^, Kari Norman^14^, Stephanie Parker^4^, Natalie Robinson^4^, Bijan Seyednasrollah^15^, Colin Smith, Sarah Spaulding^5^, Thilina Surasinghe^16^, Sarah Thomsen^17^, Phoebe Zarnetske^18,19^"
 date: '`r format(Sys.time(), "%d %B, %Y")`'
 output:
  bookdown::html_document2:
@@ -60,6 +60,29 @@ library(neonDivData)
 library(dplyr)
 ```
 
+\footnotesize
+^1^ Department of Biological Sciences, Louisiana State University, Baton Rouge, LA, United States  
+^2^ Center for Computation & Technology, Louisiana State University, Baton Rouge, LA, United States  
+^3^ Department of Biology, Bryn Mawr College, Bryn Mawr, PA, United States  
+^4^ National Ecological Observatory Network (NEON), Battelle Memorial Institute, Boulder, CO, United States  
+^5^ Institute of Arctic and Alpine Research (INSTAAR), University of Colorado Boulder, Boulder, CO, United States  
+^6^ Department of Ecology and Evolutionary Biology, University of Colorado Boulder, Boulder, CO, United States  
+^7^ Departments of Plant Biology and Plant Pathology, University of Georgia, Athens, GA, United States  
+^8^ Integrative Ecology Lab, Center for Biodiversity, Department of Biology, Temple University, Philadelphia, PA, United States  .
+^9^ Department of Environmental Science and Management, Portland State University, Portland, OR, United States  
+^10^ Department of Evolution, Ecology and Organismal Biology, The Ohio State University, Columbus, OH, United States  
+^11^ Translational Data Analytics Institute, The Ohio State University, Columbus, OH, United States  
+^12^ Ecological Processes Branch, U.S. Army ERDC CERL, Champaign, IL, United States  
+^13^ Department of Biological Sciences, DePaul Univesrity, Chicago, IL, United States  
+^14^ Department of Environmental Science, Policy, and Management, University of California Berkeley, Berkeley, CA, United States  
+^15^ School of Informatics, Computing and Cyber Systems, Northern Arizona University, Flagstaff, AZ, United States  
+^16^ Department of Biological Sciences, Bridgewater State University, Bridgewater, MA, United States  
+^17^ Department of Integrative Biology, Oregon State University, Corvallis, OR, United States  
+^18^ Department of Integrative Biology, Michigan State University, East Lansing, MI, United States  
+^19^ Ecology, Evolution, and Behavior Program, Michigan State University, East Lansing, MI, United States  
+
+\normalsize
+
 **Abstract**: Understanding patterns and drivers of the distribution and abundance of species, and thus biodiversity, is a core goal of ecology. Despite the advances made over the past decades on pursuing this goal, we are currently limited by the lack of standardized high quality empirical data across large spatial scales and long time periods. The National Ecological Observatory Network (NEON) provides such a database by conducting robust organismal sampling of several sentinel taxonomic groups across 81 sites distributed across the United States. NEON is now fully operational and will continue for 30 years, offering a unique opportunity to advance biodiversity research. To maximize the potential of this opportunity, however, it is critical to lower the hurdles for the usage of NEON organismal data. Here, we took the first step to tidy the NEON organismal data to facilitate its usage for biodiversity research. We briefly summarized sampling designs for major taxonomic groups and documented our decisions to wrangle their corresponding NEON organismal data. All codes to perform such data wrangling are freely available online, allowing contributions by others and regular updates when new data are available. Finally, we demonstrated the usage of the tidied data with two simple examples. By providing a tidied and harmonized data product, it is our hope to advance biodiversity research based on NEON organismal data in a comparable and reproducible way.
 
 **Key words**: NEON, Biodiversity, Organismal Data, Data Product 
@@ -96,9 +119,9 @@ include_graphics(here::here("manuscript/figures/fig_1.png"))
 
 ### Breeding Land Birds
 
-**NEON Sampling Design** Landbirds are surveyed with point counts during the breeding season in each of the 47 terrestrial sites, co-located with distributed plots whenever possible (Fig. \@ref(fig:Fig1Design)). Breeding landbirds are “smaller birds (usually exclusive of raptors and upland game birds) not usually associated with aquatic habitats” [@ralph1993handbook]. At NEON sites, one sampling bout occurs per breeding season at large sites, and two sampling bouts occur at smaller sites. Point counts occur either within randomly distributed individual points or within bird grids at each site in representative (dominant) vegetation. At large NEON sites, 5-15 grids are sampled with nine point count locations each, where grid centers are co-located with distributed base plot centers, if possible. If small sites only allow five grids, a stratified random sample maintains 250 m minimum separation between point count locations and point counts occur at the southwest corner of the 5-25 distributed base plots. 
+**NEON Sampling Design** Landbirds are surveyed with point counts during the breeding season in each of the 47 terrestrial sites, co-located with distributed plots whenever possible (Fig. \@ref(fig:Fig1Design)). Breeding landbirds are “smaller birds (usually exclusive of raptors and upland game birds) not usually associated with aquatic habitats” [@ralph1993handbook]. At NEON sites, one sampling bout occurs per breeding season at large sites, and two sampling bouts occur at smaller sites. Point counts occur either within randomly distributed individual points or within bird grids at each site in representative (dominant) vegetation. At large NEON sites, 5-10 (originally 5-15) grids are sampled with nine point count locations each, where grid centers are co-located with distributed base plot centers, if possible. If small sites only allow five grids, a stratified random sample maintains 250 m minimum separation between point count locations and point counts occur at the southwest corner of the 5-25 distributed base plots. 
 
-The breeding season month, which defines the timing of sampling, varies somewhat by site but always occurs in the spring. Most species observed are diurnal and include both resident and migrant species. Early in the morning observers conduct point counts wherein the observer tracks each minute. Each point count contains species, sex, and distance to each bird (measured with a laser rangefinder except in the case of flyovers) seen or heard during a 6-minute period after a 2-minute acclimation period. To enable subsequent modeling of detectability, additional data collected during the point counts include: weather, distances from observers to birds, and the detection methods. The point count surveys for NEON were modified from the Integrated Monitoring in Bird Conservation Regions (IMBCR): Field protocol for spatially-balanced sampling of landbird populations [@pavlacky2017statistically]. 
+The breeding season month, which defines the timing of sampling, varies somewhat by site. Most species observed are diurnal and include both resident and migrant species. Early in the morning observers conduct point counts wherein the observer tracks each minute. Each point count contains species, sex, and distance to each bird (measured with a laser rangefinder except in the case of flyovers) seen or heard during a 6-minute period after a 2-minute acclimation period. To enable subsequent modeling of detectability, additional data collected during the point counts include: weather, distances from observers to birds, and the detection methods. The point count surveys for NEON were modified from the Integrated Monitoring in Bird Conservation Regions (IMBCR): Field protocol for spatially-balanced sampling of landbird populations [@pavlacky2017statistically]. 
 
 To protect species of concern, their taxonomic IDs are ‘fuzzed.’ This means the data are provided with a taxonomic identification at one higher taxonomic level than where the protection occurs. For example, if a threatened Black-capped vireo (_Vireo atricapilla_) is recorded by a NEON technician, the taxonomic identification is fuzzed to Vireo in the data. Rare, threatened and endangered species are those listed as such by federal and/or state agencies.
 
@@ -138,7 +161,7 @@ Following field collection, NEON’s field ecologists process, pack up and ship 
 
 **NEON Sampling Design** NEON defines small mammals based on taxonomic, behavioral, dietary, and size constraints, and includes any rodent that is (1) nonvolant; (2) nocturnally active; (3) forages predominantly aboveground; and (4) has a mass >5 grams, but < about 500-600 grams. In North America, this includes cricetids, heteromyids, small sciurids, and introduced murids, but excludes shrews, large squirrels, rabbits, or weasels, although individuals of these species may be incidentally captured. Small mammals are collected at NEON sites using Sherman traps, identified to species in the field, marked with a unique tag, and released. Multiple 90 m x 90 m trapping grids are set up in each terrestrial field site within the dominant vegetation type. Each 90 m x 90 m trapping grid contains 100 traps placed in a pattern with 10 rows and 10 columns set 10 m apart. Three 90 m x 90 m grids per site are designated pathogen grids and the remainder are designated diversity grids. Small mammal sampling occurs in bouts, with a bout comprised of three consecutive (or nearly consecutive) nights of trapping, and is based on the lunar calendar, with timing of sampling constrained to occur within 10 days before or after the new moon. The number of bouts per year is determined by site type, and most sites contain six bouts per year. 
 
-**Data Wrangling Decisions** In the data presented, records are stratified by NEON site, year, month, and day and represent data from both the diversity and pathogen sampling grids. Capture records were removed if they were not identified to genus or species (e.g., if the species name was denoted as ‘either/or’ or as family name), if they represented dead animals (fate = 'dead') or escaped animals (fate = 'escaped'), or bycatch (fate = 'nontarget', i.e., non-target species). Records for recaptured individuals were also removed. However, we kept empty traps as they contain information about sampling efforts, which can be useful for some studies. 
+**Data Wrangling Decisions** In the data presented, records are stratified by NEON site, year, month, and day and represent data from both the diversity and pathogen sampling grids. Capture records were removed if they were not identified to genus or species (e.g., if the species name was denoted as ‘either/or’ or as family name), if they represented dead animals (fate = 'dead') or escaped animals (fate = 'escaped'), or bycatch (fate = 'nontarget', i.e., non-target species). Records where fate = ‘nontarget’ constituted only 856 taxonIDs out of the total of ca. 1.3 million records (as of February 2021). Depending on the goals of the study, the users might thus ultimately decide to remove all taxonIDs that are characterized as non-target or opportunistic according to the NEON taxonomic list (https://data.neonscience.org/taxonomic-lists), in addition to removing records where fate = ‘nontarget’, but we have not done so here. Records for recaptured individuals were also removed. However, we kept empty traps as they contain information about sampling efforts, which can be useful for some studies. 
 
 ### Soil Microbes
 
@@ -148,29 +171,29 @@ Following field collection, NEON’s field ecologists process, pack up and ship 
 
 ### Terrestrial Plants
 
-**NEON Sampling Design** NEON plant diversity plots are sampled during one or two bouts per year, and are 400 m x 400 m in size. Sampling is done using a nested design, where the entire plot is first subdivided into 4 100 m x 100 m subplots. For each subplot, one or more 1 m x 1 m nested subplots are then sampled; species coverages within the 1 m^2^ area are estimated visually. Next presence/absence of plants is recorded in one or more 10 m x 10 m subplots, inside of which the finer resolution subplots are located. Finally, the 100 m x 100 m subplot is sampled for presence/absence of plants. At the 10 m by 10 m and 100 m by 100 m scales, only presence and absence of plants were recorded. Each species is recorded only once during sampling, such that an observation of a species at a finer-resolution subplot prevents it from being recorded again if it is encountered in a coarser-resolution subplot. A full dataset for each NEON plant diversity plot was generated by combining all data from all subplots within the 400 m x 400 m boundary, and removing duplicates (which may occur across the 100 m x 100 m subdivisions). More details about the sampling design can be found in @barnett2019plant. 
+**NEON Sampling Design** NEON plant diversity plots are sampled during one or two bouts per year, and are 20 m $\times$ 20 m in size. Sampling is done using a nested design, where the entire plot is first subdivided into 4 10 m $\times$ 10 m subplots. For each subplot, one or two 1 m $\times$ 1 m nested subplots are then sampled; species coverages within the 1 m^2^ area are estimated visually. Next, presence/absence of plants is recorded in one or more 10 m^2^ subplots, inside of which the 1 m^2^ subplots are located. Finally, the 10 m $\times$ 10 m subplot is sampled for presence/absence of plants. At the 10 m^2^ and 100 m^2^ scales, only presence and absence of plants were recorded. Each species is recorded only once during sampling, such that an observation of a species at a finer-resolution subplot prevents it from being recorded again if it is encountered in a coarser-resolution subplot. A full dataset for each NEON plant diversity plot was generated by combining all data from all subplots within the 20 m $\times$ 20 m boundary, and removing duplicates (which may occur across the 10 m $\times$ 10 m subdivisions). More details about the sampling design can be found in @barnett2019plant. 
 
-NEON manages plant taxonomic entries with a master taxonomy list that is based on the community standard, where possible. Using this list, synonyms for a given species are converted to the currently used name. The master taxonomy for plants is the USDA PLANTS Database (USDA, NRCS. 2014. <https://plants.usda.gov>), and the portions of this database included in the NEON plant master taxonomy list are those pertaining to native and naturalized plants present within the NEON sampling area. A sublist for each NEON domain includes those species with ranges that overlap the domain as well as nativity designations - introduced or native - in that part of the range. If a species is reported at a location outside of its known range, and the record proves reliable, the master taxonomy list is updated to reflect the distribution change. For more on the NEON plant master taxonomy list see NEON.DOC.014042 (<https://data.neonscience.org/api/v0/documents/NEON.DOC.014042vK>).
+NEON manages plant taxonomic entries with a master taxonomy list that is based on the community standard, where possible. Using this list, synonyms for a given species are converted to the currently used name. The master taxonomy for plants is the USDA PLANTS Database (USDA, NRCS. 2014. https://plants.usda.gov), and the portions of this database included in the NEON plant master taxonomy list are those pertaining to native and naturalized plants present within the NEON sampling area. A sublist for each NEON domain includes those species with ranges that overlap the domain as well as nativity designations - introduced or native - in that part of the range. If a species is reported at a location outside of its known range, and the record proves reliable, the master taxonomy list is updated to reflect the distribution change. For more on the NEON plant master taxonomy list see NEON.DOC.014042 (https://data.neonscience.org/api/v0/documents/NEON.DOC.014042vK).
 
-**Data Wrangling Decisions** Sampling at the 1 m x 1 m scale also includes observations of abiotic and non-target species ground cover (i.e., soil, water, downed wood), so we removed records with `divDataType` as "otherVariables". We also removed records whose `targetTaxaPresent` is `N` (i.e., a non-target species). Additionally, for all spatial resolutions (i.e., 1 m x 1 m, 10 m x 10 m, and 100 m x 100 m data), any record lacking information critical for combining data within a plot and for a given sampling bout (i.e., `plotID`, `subplotID`, `boutNumber`, `endDate`, or `taxonID`) was dropped from the dataset. Furthermore, records without a definitive genus or species level `taxonID` (i.e., those representing unidentified morphospecies) were not included. To combine data from different spatial resolutions into one data frame, we created a pivot column entitled `sample_area_m2` (with possible values of 1, 100, and 10000). Because of the nested sampling design of the plant data, to capture all records within a subplot at 10 m by 10 m scale, we incorporated all data from both the 1 m by 1 m and 10 m by 10 m scales for that subplot. Similarly, to obtain all records within a subplot at the 100 m by 100 m scale, we included all data from that subplot. Species abundance information was only recorded as area coverage within 1 m by 1 m subplots; however, users may use the frequency of a species across subplots within a plot or plots within a site as a proxy of its abundance if needed.
+**Data Wrangling Decisions** Sampling at the 1 m $\times$ 1 m scale also includes observations of abiotic and non-target species ground cover (i.e., soil, water, downed wood), so we removed records with `divDataType` as “otherVariables.” We also removed records whose `targetTaxaPresent` is `N` (i.e., a non-target species). Additionally, for all spatial resolutions (i.e., 1 m^2^, 10 m^2^, and 100 m^2^ data), any record lacking information critical for combining data within a plot and for a given sampling bout (i.e., `plotID`, `subplotID`, `boutNumber`, `endDate`, or `taxonID`) was dropped from the dataset. Furthermore, records without a definitive genus or species level `taxonID` (i.e., those representing unidentified morphospecies) were not included. To combine data from different spatial resolutions into one data frame, we created a pivot column entitled `sample_area_m2` (with possible values of 1, 10, and 100). Because of the nested sampling design of the plant data, to capture all records within a subplot at 100 m^2^ scale, we incorporated all data from both the 1 m^2^ and 10 m^2^ scales for that subplot. Similarly, to obtain all records within a plot at the 400 m^2^ scale, we included all data from that plot. Species abundance information was only recorded as area coverage within 1 m by 1 m subplots; however, users may use the frequency of a species across subplots within a plot or plots within a site as a proxy of its abundance if needed.
 
 ### Ticks and Tick Pathogens
 
 **NEON Sampling Design** Tick sampling occurs in six distributed plots at each site, which are randomly chosen in proportion to NLCD land cover class. Sampling begins on a low intensity schedule with one sampling bout every six weeks. Once >5 ticks of any life stage have been collected within the last year at that site, sampling switches to a high intensity schedule with one bout every three weeks. A site remains on the high intensity schedule until <5 ticks are collected within a year, then it reverts back to the low intensity schedule. High intensity sampling reoccurs when >5 ticks are collected within a year. Onset of sampling coincides with phenological milestones at each site, beginning within two weeks of the onset of green-up and ending within two weeks of vegetation senescence. Sampling bouts are only initiated if the high temperature on the two consecutive days prior to planned sampling was >0°C.
 
-Ticks are sampled by walking the perimeter of a 40 m x 40 m plot using a 1 m x 1 m drag cloth. Ideally, 160 meters are sampled (shortest straight line distance between corners), but the cloth can be dragged around obstacles if a straight line is not possible. Acceptable total sampling area is between 80-180 meters. The cloth can also be flagged over vegetation when the cloth cannot be dragged across it. Ticks are collected from the cloth and technicians’ clothing at appropriate intervals depending on vegetation density and at every corner of the plot and are immediately transferred to a vial containing RNA stabilization solution. 
+Ticks are sampled by walking the perimeter of a 40 m $\times$ 40 m plot using a 1 m $\times$ 1 m drag cloth. Ideally, 160 meters are sampled (shortest straight line distance between corners), but the cloth can be dragged around obstacles if a straight line is not possible. Acceptable total sampling area is between 80-180 meters. The cloth can also be flagged over vegetation when the cloth cannot be dragged across it. Ticks are collected from the cloth and technicians’ clothing at appropriate intervals depending on vegetation density and at every corner of the plot and are immediately transferred to a vial containing 95% ethanol. 
 
 Ticks are sent to the US National Tick Collection at Georgia Southern University for identification to species, life stage, and sex. A subset of nymphal ticks are sent to the Laboratory of Medical Zoology at the University of Massachusetts Amherst for pathogen testing. _Ixodes scapularis_ are tested for _Anaplasma phagocytophilum_, _Babesia microti_, _Borrelia burgdorferi_ sensu lato, _Borrelia miyamotoi_, _Borrelia mayonii_, other _Borrelia_ species (_Borrelia_ sp.), and a _Ehrlichia_ muris-like agent [@pritt2017proposal]. _Amblyomma americanum_ was tested for _Anaplasma phagocytophilum_, _Borrelia lonestari_ (and other undefined _Borrelia_ species), _Ehrlichia chaffeensis_, _Ehrlichia ewingii_, _Francisella tularensis_, and _Rickettsia rickettsii_. 
 
-**Data Wrangling Decisions** We downloaded the tick drag and taxonomic identification data (DP1.10093.001; `tck_taxonomyProcessed` hereafter referred to as ‘taxonomy data’; `tck_fielddata` hereafter referred to as ‘field data’) via the NEON API. We note that end users should be aware of some issues related to taxonomic ID. Counts assigned to higher taxonomic levels (e.g., at the order level _Ixodida_; IXOSP2) are not the sum of lower levels; rather they represent the counts of individuals that could not reliably be assigned to a lower taxonomic unit. Some identifications (e.g., IXOSPP) represent potentially mixed samples with more than one species present. Users should exercise caution when computing metrics like richness from these data. Finally, we assigned those samples that were not identified in the lab to the highest taxonomic level (order _Ixodida_; IXOSP2). However, users could make an informed decision to assign these ticks to the most probable group if a subset of individuals from the same sample were assigned to a lower taxonomy.
+**Data Wrangling Decisions** We downloaded the tick drag and taxonomic identification data (DP1.10093.001; `tck_taxonomyProcessed` hereafter referred to as ‘taxonomy data’; `tck_fielddata` hereafter referred to as ‘field data’) via the NEON API. We note that end users should be aware of some issues related to taxonomic ID. Counts assigned to higher taxonomic levels (e.g., at the family level _Ixodidae_; IXOSP) are not the sum of lower levels; rather they represent the counts of individuals (usually larvae) that could not reliably be assigned to a lower taxonomic unit. Some identifications (e.g., IXOSPP) represent potentially mixed samples with more than one species present. Users should exercise caution when computing metrics like richness from these data. Finally, we assigned those samples that were not identified in the lab to the highest taxonomic level (order _Ixodida_; IXOSP2). However, users could make an informed decision to assign these ticks to the most probable group if a subset of individuals from the same sample were assigned to a lower taxonomy.
 
-First, in the field data, we removed samples that had sampling issues and samples with no count data, which mostly consisted of 2019 data that had not been processed. Next, we removed field samples that did not have corresponding taxonomic information. Conversely, we removed taxonomy samples that did not have corresponding field information, many of which were legacy samples where larvae were not counted. We retained these records where no ticks were found in a sampling bout. In the taxonomy data, we removed samples that did not have an “OK” sample condition.
+To clean the tick data, we first removed surveys and samples not meeting quality standards. In the taxonomy data, we removed samples where sample condition was not listed as “OK” (<1% of records). In the field data, we removed records where samples were not collected due to logistical concerns (10%).  We then combined male and female counts in the taxonomy table into one “adult” class. The taxonomy table was re-formatted so that every row was a sampleID and counts for each species life-stages were separate columns (i.e., “wide format”). Next, we joined the field data to the taxonomy data, using the sample ID to link the two tables. When joining, we retained field records where no ticks were found in the field and thus there was no associated taxonomy data. In drags where ticks were not found, we filled in counts with zeroes.
 
-We left-joined the field data to the taxonomy data to preserve zeros in the count data. To merge the two datasets, we combined ‘male’ or ‘female’ into one ‘adult’ class. Next, we reconciled differences in counts between the two datasets, generally placing greater confidence in the counts from the taxonomy lab (note that beginning in 2019, counts are only taken by taxonomists, so reconciling field and lab counts will no longer be necessary). If the lab determined no ticks were present in the sample (e.g., ticks were mis-identified in the field), we corrected the field data to match the taxonomy data. When there were discrepancies between the identified life-stages but not the total counts of ticks, we retained the counts from the lab. Larvae were not always identified or counted in the lab, or if they were, were only counted up to a limit. If there were more larvae in the field than in the lab (7% of samples), we assigned the remaining unidentified larvae to the order level (IXOSP2). Similarly, in some cases the lab only identified ticks up to a certain invoicing limit, usually 500 individuals. In these cases (2% of samples) we assigned remaining unidentified ticks to the order level.
+Prior to 2019, both field surveyors and laboratory taxonomists enumerated each tick life-stage; consequently, in the joined dataset there were two sets of counts (“field counts” and “lab counts”). However, starting in 2019, counts were performed by taxonomists rather than field surveyors. Field surveys conducted after 2019 no longer have field counts. Users of tick abundance data should be aware that this change in protocol has several implications for data wrangling and for analysis. First, after 2019, tick counts are no longer published at the same time as field survey data. Subsequently, some field records from the most recent years have tick presence recorded (targetTaxaPresent = “Y”), but do not yet have associated counts or taxonomic information and so the counts are still listed as `NA`. We have added a column to designate whether counts are still pending as of this data release. Users should be aware that counts of zero are therefore published earlier than positive counts. We strongly urge users to filter data to those years where there are no counts pending. 
 
-In cases where counts were off by only a few individuals (3% of samples), we attributed these to miscounts in the field or ticks lost in transit and trusted the taxonomy counts. In cases where one to two ticks in the field data were missing but the discrepancy was >10% of the total count, we assigned those missing ticks to the order level in an adult-specific column. In cases with larger discrepancies without an obvious remark describing it (0.1% of cases), we removed the sample from the dataset, making sure that these cases were <1% of the size of the total dataset. We note that the majority of samples (~85%) had no discrepancies between the lab or field, therefore this process could be ignored by users for whom analyses are not sensitive to exact counts. 
+The second major issue is that in years where both field counts and lab counts were available, they did not always agree (8% of records). In cases of disagreement, we generally used lab counts in the final abundance data, because this is the source of all tick count data after 2019 and because life-stage identification was more accurate. However, there were a few exceptions where we used field count data. In some cases, only a subsample of a certain life-stage was counted in the lab, which resulted in higher field counts than lab counts. In this case, we assigned the additional un-identified individuals (e.g. the difference between the field and lab counts) to the order level (IXOSP2). If quality notes from NEON described ticks being lost in transit, we also added the additional lost individuals to the order level. There were some cases (<1%) where the field counts were greater than lab counts by more than 20% and where the explanation was not obvious; we removed these records.We note that the majority of samples (~85%) had no discrepancies between the lab or field, therefore this process could be ignored by users for whom analyses are not sensitive to exact counts.
 
-For tick pathogens, we downloaded tick pathogen data (DP1.10092.001; `tck_pathogen` hereafter referred to as ‘pathogen data’; `tck_pathogenqa` hereafter referred to as ‘quality data’) via the NEON API. First, we removed any samples that had flagged quality checks from the quality data and removed any samples that did not have a positive DNA quality check from the pathogen data. Although the original online protocol aimed to test 130 ticks per site per year from multiple tick species, the final sampling decision was to extensively and thoroughly test IXOSCA and AMBAME species only. _Borrelia burgdorferi_ and _Borrelia burgdorferi sensu lato_ tests were merged, since the former was an incomplete pathogen name and likely referred to _B. burgdorferi sensu lato_ as opposed to _sensu stricto_ [@rudenko2011updates]. Tick host species was not included in the original data sheet, but we manually added these to the cleaned data sheets by extracting tick species from subsampleID names.
+For tick pathogens, we downloaded tick pathogen data (DP1.10092.001; `tck_pathogen` hereafter referred to as ‘pathogen data’; `tck_pathogenqa` hereafter referred to as ‘quality data’) via the NEON API. First, we removed any samples that had flagged quality checks from the quality data and removed any samples that did not have a positive DNA quality check from the pathogen data. Although the original online protocol aimed to test 130 ticks per site per year from multiple tick species, the final sampling decision was to extensively est IXOSCA, AMBAME, and AMBSP species only because IXOPAC and _Dermacentor_ nymph frequency was too rare to generate meaningful pathogen data. _Borrelia burgdorferi_ and _Borrelia burgdorferi sensu lato_ tests were merged, since the former was an incomplete pathogen name and refersto _B. burgdorferi sensu lato_ as opposed to _sensu stricto_ [@rudenko2011updates]. Tick host species was not included in the original data sheet, but we manually added these to the cleaned data sheets by extracting tick species from subsampleID names.
 
 ## Aquatic Organisms
 
@@ -224,7 +247,7 @@ All cleaned data products can be obtained from the R package `neonDivData`, whic
 (ref:Table1SummaryCap) **Summary of data products included in this study.**
 
 ```{r dataSummary, echo=FALSE}
-knitr::kable(rename(neonDivData::data_summary, `data product ID` = neon_DPI), 
+knitr::kable(rename(neonDivData::data_summary, NEON_product_ID = neon_DPI), 
        caption = '(ref:Table1SummaryCap)', booktab = T, 
        # align = "lrrrrrr", 
        linesep = "") %>%
