--- a/manuscript/ref.bib
+++ b/manuscript/ref.bib
@@ -219,6 +219,13 @@
   publisher={Nature Publishing Group}
 }
 
+@book{harte2011maximum,
+  title={Maximum entropy and ecology: a theory of abundance, distribution, and energetics},
+  author={Harte, John},
+  year={2011},
+  publisher={OUP Oxford}
+}
+
 @article{wickham2014tidy,
   title={Tidy data},
   author={Wickham, Hadley and others},
