update ms figures and bib

--- a/manuscript/ref.bib
+++ b/manuscript/ref.bib
@@ -236,6 +236,13 @@
   year={2014}
 }
 
+@article{welti2021meta,
+  title={Meta-analyses of insect temporal trends must account for the complex sampling histories inherent to many long-term monitoring efforts},
+  author={Welti, E. and Joern, A. and Ellison, A.M. and Lightfoot, D. and Record, S. and Rodenhouse, N. and Stanley, E. and Kaspari, M.},
+  journal={Nature Ecology and Evolution},
+  year={2021}
+}
+
 @article{rudenko2011updates,
   title={Updates on Borrelia burgdorferi sensu lato complex with respect to public health},
   author={Rudenko, Nataliia and Golovchenko, Maryna and Grubhoffer, Libor and Oliver Jr, James H},
@@ -538,6 +545,17 @@
   publisher={JSTOR}
 }
 
+@article{heffernan2014macrosystems,
+  title={Macrosystems ecology: understanding ecological patterns and processes at continental scales},
+  author={Heffernan, James B and Soranno, Patricia A and Angilletta Jr, Michael J and Buckley, Lauren B and Gruner, Daniel S and Keitt, Tim H and Kellner, James R and Kominoski, John S and Rocha, Adrian V and Xiao, Jingfeng and others},
+  journal={Frontiers in Ecology and the Environment},
+  volume={12},
+  number={1},
+  pages={5--14},
+  year={2014},
+  publisher={Wiley Online Library}
+}
+
 @article{hillebrand2004generality,
   title={On the generality of the latitudinal diversity gradient},
   author={Hillebrand, Helmut},
@@ -547,6 +565,17 @@
   pages={192--211},
   year={2004},
   publisher={The University of Chicago Press}
+}
+
+@article{farrell2018power,
+  title={Power, pitfalls, and potential for integrating computational literacy into undergraduate ecology courses},
+  author={Farrell, Kaitlin J and Carey, Cayelan C},
+  journal={Ecology and evolution},
+  volume={8},
+  number={16},
+  pages={7744--7751},
+  year={2018},
+  publisher={Wiley Online Library}
 }
 
 @article{read2018among,
