--- a/README.Rmd
+++ b/README.Rmd
@@ -20,14 +20,15 @@ knitr::opts_chunk$set(
 
 The goal of neonDivData is to provide cleaned NEON organismal data to facilitate biodiversity research. The authors of this R data package have all spend lots of effort to clean NEON data for our own research; it makes the most sense to document such processes and provide the clean data product so that the large community can use them readily. This will save us time to dig into the extensive documenations of NEON data and to clean up the data individually. 
 
-Data products for all taxonomic groups are long data frames with names in the format of `data_xxx` (e.g. `data_plant`, `data_fish`). Location inforamtions are in `neon_locations`; taxonomic informations are in `neon_taxa`.
+Data products for all taxonomic groups are long data frames with names in the format of `data_xxx` (e.g. `data_plant`, `data_fish`). Location inforamtions are in `neon_location`; taxonomic informations are in `neon_taxa`.
 
 Despite the aim of this R data package is to facilitate biodiversity research, we keep `NA`s in data products so that information about sampling effort is saved. For some taxonomic groups, we removed observations with above genus level species identification. All codes to clean up the NEON data are available within our [Github repo](https://github.com/daijiang/neonDivData/tree/master/data-raw). Users can use them to customize their own data product if needed.
 
 Available taxonomic groups and their brief summaries:
 
 ```{r}
-knitr::kable(neonDivData::data_summary)
+# sites too long, don't print
+knitr::kable(neonDivData::data_summary[, !names(neonDivData::data_summary) %in% c("sites", "data_package_id")])
 ```
 
 ## Installation
@@ -44,8 +45,7 @@ devtools::install_github("daijiang/neonDivData")
 ```{r example}
 neonDivData::neon_sites
 neonDivData::neon_taxa
-neonDivData::neon_locations
-
+neonDivData::neon_location
 neonDivData::data_algae
 neonDivData::data_beetle
 neonDivData::data_bird
